# inductance-meter

./: .gitignore  CMakeLists.txt
simulations/: Colpitts_Oscillator.asc  Draft1.asc  Step-Resonance.asc  Two-Transistor-Oscillator.asc
src/: freq_meas_test.c  main.c
